--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
