--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "contentful": "^10.6.25",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
